@@ -8,7 +8,10 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## [Unreleased]
 ### Added
 - [API_PARSER] Add loggers before the requests to make easier the debugging
+### Changed
+- [API_PARSER] [CISCO_MERAKI] Change common logger to warn instead of error
 ### Fixed
+- [API_PARSER] [CISCO_MERAKI] Fix bug when 'get_security_logs' is False
 - [API_PARSER] [BEYONDTRUST_REPORTINGS] 'since' going up infinitely in some cases
 - [SYSTEM] [NETSKOPE] Reduce time ranges to 10 minutes max to avoid overflow in queries
 
